--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
       - id: check-symlinks
       - id: check-yaml
         exclude: ^conda\.recipe/meta\.yaml/python\.yaml$
+        args: [--unsafe]
       - id: debug-statements
       - id: end-of-file-fixer
       - id: mixed-line-ending
