--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,8 @@ on:
     branches: ["main"]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+env:
+  PIP_ROOT_USER_ACTION: ignore
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
@@ -37,7 +39,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-          pip install mkdocs  # Install pdoc for generating documentation
+          pip install mkdocstrings-python mkdocs-material mkdocs-gen-files mkdocs-literate-nav
+          pip install markdown-callouts markdown-exec
+          pip install git+https://github.com/tim25651/griffe-fieldz-fork
       # Step 4: Generate documentation
       - name: Generate documentation
         run: |
