--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,11 +11,19 @@
 #     pre-commit autoupdate
 #
 # See https://github.com/pre-commit/pre-commit
-
 ci:
   autoupdate_commit_msg: "chore: update pre-commit hooks"
   autofix_commit_msg: "style: pre-commit fixes"
 repos:
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.11.5
+    hooks:
+      # Run the formatter.
+      - id: ruff-format
+      # Run the linter.
+      - id: ruff
+        args: [--fix]
   # Standard hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
@@ -57,9 +65,3 @@ repos:
 #  rev: v13.0.0
 #  hooks:
 #  - id: clang-format
-
-# pyproject-tools
-
-# Put your content here
-
-# pyproject-tools
